Bugfix, yom intro position overlap

--- a/src/app/assets/scss/_components/_components.page-intro.scss
+++ b/src/app/assets/scss/_components/_components.page-intro.scss
@@ -54,7 +54,7 @@
 .intro__slogan {
   position: relative;
   left: -61%;
-  top: -11.5%;
+  top: -93px;
 
   width: 161%;
 
